--- a/src/Components/NavBarStyles.css
+++ b/src/Components/NavBarStyles.css
@@ -1,18 +1,19 @@
+
 .navbar--items{
     display: flex;
     justify-content: space-between;
     white-space: nowrap;
     align-items: center;
-    margin-top: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-top: 5px;
+    margin-top: 10px;
+    margin-left: 35px;
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 5px;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .2);
     height: 75px;
     border-radius: 13px;
+    position: absolute;
+    width: 95%;
 }
 h1{
     cursor: pointer;
@@ -99,23 +100,26 @@ a{
         display:flex;
         margin-bottom: .25rem;
         flex-direction: column;
-        align-items: flex-start;
+        align-items:center;
         justify-content: flex-start;
         position: fixed;
         top: 90px;
-        right: -3000px;
+        right: -100%;
+        opacity: 0;
         width: 50%;
-        height: 100vh;
-        background-color: #CFDEE7;
+        height: 80vh;
+        background-color: transparent;
         padding: 40px 0 0 10px;
         border-radius: 13px;
         margin-right: 10px;
-        border-top: 10px;
+        margin-top: 10px;
+        box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .2);
         transition:0.3s ease-in-out;
     }
     
     #navbar.active{
         right: 0px;
+        opacity: 1;
     }
     nav ul li{
         width: 100%;
@@ -123,8 +127,9 @@ a{
     }
     
     #mobile{
+        cursor: pointer;
         display: block;
-        
+        font-size: 1.2rem;
     }
     
 
